Fixed performance issues reported by FindBugs. Made corresponding changes for C# where applicable.